# nexus

./: .gitignore  CLAUDE.md  HANDOVER.md  config.json  package.json  pnpm-lock.yaml  webpack.config.ts
.github/workflows/: pages.yml  tauri-check.yml  tauri-release.yml
docs/: app-spec.md  conventions.md  discord-tech-research.md  native-capture-plan.md  nexus-feature-proposals.md  progress.md  server-migration.md  tech-stack.md  vc-optimization.md
infra/livekit/: docker-compose.yml  livekit.yaml  nginx.conf
res/: manifest.json  popout.html  welcome.html
res/css/: _common.pcss  _components.pcss  _compound.pcss
res/css/structures/: _LeftPanel.pcss  _MatrixChat.pcss  _RoomView.pcss  _SpacePanel.pcss
src/: SdkConfig.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  lib.rs
src/@types/: global.d.ts  png.d.ts
src/async-components/structures/: ErrorView.tsx
src/components/structures/: LeftPanel.tsx  LoggedInView.tsx  RoomView.tsx  (+3 more)
src/hooks/: useActiveCall.ts  useCall.ts  useChannelSeparation.ts  useNexusActiveSpeakers.ts  useNexusParticipantStates.ts  useNexusScreenShares.ts  useNexusVoice.ts  useNexusWatchingScreenShares.ts  useVCParticipants.ts
src/models/: Call.ts  NexusVoiceConnection.ts
src/serviceworker/: index.ts
src/settings/: Settings.tsx
src/stores/: CallStore.ts  NexusUpdateStore.ts  NexusUserColorStore.ts  NexusVoiceStore.ts  RoomViewStore.tsx
src/toasts/: IncomingCallToast.tsx
src/utils/: FormattingUtils.ts  NexusNativeCapture.ts  popoutStyles.ts  tauriHttp.ts
src/vector/: index.html  init.tsx
test/unit-tests/: Notifier-test.ts
workers/livekit-cors-proxy/: wrangler.toml
(+72 files in other folders)
