[package]
name = "nexus"
version = "0.1.0"
description = "Nexus — Discord-style Matrix client"
authors = ["mi2h1"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-capture = "1.5"
wasapi = "0.22"
turbojpeg = "1"
