[package]
name = "nexus"
version = "0.2.10"
description = "Nexus — Discord-style Matrix client"
authors = ["mi2h1"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-capture = "1.5"
wasapi = "0.22"
turbojpeg = "1"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "implement",
] }
windows-core = "0.58"
